Bug 399659 - Root device has Unmount option in context menu
Summary: Root device has Unmount option in context menu
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.08.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-11 12:35 UTC by Sefa Eyeoglu
Modified: 2018-11-14 19:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications 18.12.0 and Frameworks 5.53
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sefa Eyeoglu 2018-10-11 12:35:42 UTC
SUMMARY
The device that's mounted on / (/dev/sda2 in my case) has the option to unmount on it's context menu in Dolphin. If I click on Unmount I get an error (as expected)


STEPS TO REPRODUCE
1. Right-click on Root device in "Devices" section
2. Click on Unmount


OBSERVED RESULT
Unmount option is shown


EXPECTED RESULT
Unmount option should be hidden.


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.13.90
KDE Frameworks Version: 5.50.0
Qt Version: 5.12.0


ADDITIONAL INFORMATION
I am unsure if this is kio or Dolphin.
Comment 1 Nate Graham 2018-10-11 15:37:49 UTC
Will be fixed with https://phabricator.kde.org/D15989
Comment 2 Thomas Surrel 2018-10-11 21:34:28 UTC
Git commit ddd746675c98d7e10f732271ce55c734fa48a5ca by Thomas Surrel.
Committed on 11/10/2018 at 21:34.
Pushed by thsurrel into branch 'master'.

Disable unmount option for / or /home

Summary:
This removes the 'Unmount' context menu in the Places panel for discs
corresponding to / and /home.

It does not make much sense to offer an option that will always fail.

Reviewers: #dolphin, #vdg, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: sefaeyeoglu, elvisangelaccio, ngraham, broulik, bruns, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D15989

M  +11   -0    src/panels/places/placespanel.cpp

https://commits.kde.org/dolphin/ddd746675c98d7e10f732271ce55c734fa48a5ca
Comment 3 Thomas Surrel 2018-11-13 22:55:27 UTC
Git commit 45597c32627f28bd807a2497b5bbafaf7dfc1f77 by Thomas Surrel.
Committed on 13/11/2018 at 22:55.
Pushed by thsurrel into branch 'master'.

Disable unmount option for / or /home

Summary:
This disables the 'Unmount' context menu in the Places panel for discs
corresponding to / and /home.

It does not make much sense to offer an option that will always fail.

Twin of D15989 for Dolphin

Reviewers: #frameworks, ngraham

Reviewed By: ngraham

Subscribers: dfaure, broulik, ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D16141

M  +16   -3    src/filewidgets/kfileplacesview.cpp

https://commits.kde.org/kio/45597c32627f28bd807a2497b5bbafaf7dfc1f77